<resources>
    <string name="app_name">Chemia</string>
    <string name="loading">Ładowanie...</string>
    <string name="quiz_title">Quiz Chemiczny</string>
    <string name="btn_play_quiz">Graj w Quiz</string>
    <string name="btn_rankings">Ranking</string>
    <string name="welcome_back">Witaj z powrotem,</string>
    <string name="choose_mode">Wybierz tryb</string>
    <string name="quick_quiz">Szybki Quiz</string>
    <string name="study_mode">Nauka</string>
    <string name="exam_mode">Egzamin</string>
    <string name="blitz_mode">Blitz</string>
    <string name="quiz_completed">Quiz ukończony!</string>
    <string name="good_job">Dobra robota! 🎉</string>
    <string name="try_again">Spróbuj jeszcze raz!</string>
    <string name="excellent">Wyśmienicie!</string>
    <string name="weak_area">Słaba strona</string>
    <string name="play_again">Zagraj ponownie</string>
    <string name="menu">Menu</string>
    <string name="settings_saved">Ustawienia zapisane</string>
    <string name="settings_title">Ustawienia</string>
    <string name="settings_username_label">Nazwa użytkownika</string>
    <string name="settings_username_hint">Użytkownik</string>
    <string name="settings_sound">Dźwięki</string>
    <string name="settings_haptics">Wibracje</string>
    <string name="settings_save">Zapisz</string>
    <string name="settings_back">Wróć</string>
    <string name="settings_name_sync_error">Nie udało się zaktualizować nazwy w rankingu.</string>
    <string name="ranking_title">Ranking</string>
    <string name="ranking_my_name">Twój identyfikator gracza:</string>
    <string name="ranking_refresh">Odśwież</string>
    <string name="ranking_empty">Brak danych rankingu lub Firebase nie jest jeszcze podpięty.</string>
    <string name="ranking_row_details">Quizy: %1$d • Best: %2$d%%</string>
    <string name="ranking_row_points_details">Skuteczność: %1$d%% • Quizy: %2$d</string>
    <string name="ranking_row_efficiency_details">Punkty: %1$d • Quizy: %2$d</string>
    <string name="ranking_row_quizzes_details">Punkty: %1$d • Skuteczność: %2$d%%</string>
    <string name="ranking_sync_pending">Nie udało się zsynchronizować wyniku z rankingiem.</string>
    <string name="ranking_top_points">Top 100 - Punkty</string>
    <string name="ranking_top_efficiency">Top 100 - Skuteczność</string>
    <string name="ranking_top_quizzes">Top 100 - Ilość quizów</string>
    <string name="ranking_tab_points">Punkty</string>
    <string name="ranking_tab_efficiency">Skuteczność</string>
    <string name="ranking_tab_quizzes">Quizy</string>
    <string name="name_setup_title">Utwórz konto</string>
    <string name="name_setup_subtitle">Ustaw nazwę gracza (1-12 znaków, tylko litery A-Z i cyfry 0-9).</string>
    <string name="name_setup_hint">Np. Gracz007</string>
    <string name="name_setup_confirm">Zapisz i graj</string>
    <string name="name_setup_validation_error">Nazwa musi mieć 1-12 znaków i zawierać tylko litery A-Z oraz cyfry.</string>
    <string name="name_setup_name_taken">Ta nazwa jest już zajęta. Wybierz inną.</string>
    <string name="name_setup_save_error">Nie udało się zapisać konta. Spróbuj ponownie.</string>
    <string name="name_setup_required">Utwórz konto gracza, aby zapisać wynik w rankingu.</string>
</resources>